syntax = "proto3";

package obd.v1;
import "obd/v1/user/entity.proto";

message UserCreateRequest {
    string name = 1;
    string phone = 2;
    string email = 3;
    string password = 4;
}


message UserCreateResponse {
    User user = 1;
}

